--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,12 @@ body{
 }
 
 /* media query */
+@media only screen and (max-width:992px) and (min-width:768px){
+    
+    .two-section p{
+        text-align: justify;
+    }
+}
 @media only screen and (max-width:767px){
 	
 	
